[metadata]
name = cybera-designate-sink-handler
summary = Cybera Designate Sink Handler

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = cybera_designate_sink_handler

[entry_points]
designate.notification.handler =
    nova_floating = cybera_designate_sink_handler.v4handler:NovaFloatingHandler
    nova_fixed_v6 = cybera_designate_sink_handler.v6handler:NovaFixedV6Handler

[egg_info]
tag_build = 0.0.1
tag_date = 0
tag_svn_revision = 0
